# Lab-ComputerGraphics-WS2023

./: .gitignore  CMakeLists.txt  README.md
cubemaps/: uffizi_nx.hdr  uffizi_ny.hdr  uffizi_nz.hdr  uffizi_px.hdr  uffizi_py.hdr  uffizi_pz.hdr
materials/: blue_metal.material  bunny.material  debug.material  gold.material  lambert.material  two_layers.material  volume_layer.material
presentation-layered/: .gitignore  presentation-layered.tex
presentation-layered/tex/: content.tex  literature.bib  macros.tex
report-glints/: .gitignore  report-glints.tex
report-glints/figures/: anisoglints.tex  anisotropy.tex  approximation.py  approximation.tex  approximation.tikz  artifact.tex  blending-distributed.tikz  blending-linear.tikz  blending-reference.tikz  blending.py  blending.tex  convergence.tex  dimensions.tex  footprint-grid-simplex.tex  footprint-grid.tex  grid.tex  halfvector-grid.tex  mesofacets.tex  overshooting.tex  performance.py  performance.tex  performance.tikz  snowbunny.tex  surface-grid.tex  teaser.tex
report-glints/tex/: 0-abstract.tex  1-introduction.tex  2-related.tex  3-1-shading-model.tex  3-2-1-discretization  3-2-1-discretization.tex  3-2-2-blending  3-2-2-blending.tex  3-2-3-approximation  3-2-3-approximation.tex  3-3-implementation  3-3-implementation.tex  3-methodology.tex  4-evaluation.tex  5-future.tex  6-conclusion.tex  appendix.tex  literature.bib  macros.tex  structure.tex  style.tex  teaser.tex
report-layered/: .gitignore  report-layered.tex
report-layered/figures/: performance_IBL_plot.py  performance_layer_plot.py  performance_plot.py
report-layered/tex/: 0-abstract.tex  1-introduction.tex  2-related-work.tex  3-methodology.tex  4-evaluation.tex  5-future-work.tex  6-conclusion.tex  7-appendix.tex  content.tex  literature.bib  teaser.tex
shaders/: background.frag  debug.frag  ggx.frag  ggx.glsl  lambert.frag  lighting.frag  projection.vert  random.glsl  screen.vert  uniforms.glsl
shaders/glints/: barycentric.glsl  binom.glsl  debug.glsl  footprint.glsl  glints.frag  glints.glsl  glints_ambient.frag  glints_aniso.frag  hepta.glsl  math.glsl  random.glsl  reference.frag  reference.glsl  tetra.glsl
shaders/layered/: common.glsl  layered.frag  layered_aniso.frag
shaders/shared/: background.frag  debug.frag  debug.glsl  ggx.frag  ggx.glsl  ggx_aniso.frag  lambert.frag  lowdiscrepancysequence.glsl  projection.vert  screen.vert  tangentspace.glsl  uniforms.glsl
src/: config.hpp.in  main.cpp  mainapp.cpp  mainapp.hpp  util.cpp  util.hpp
src/framework/: app.cpp  common.cpp  common.hpp  config.hpp.in  glmjson.hpp  material.hpp  object.cpp  object.hpp  series.hpp
src/framework/gl/: buffer.cpp  buffer.hpp  mesh.cpp  mesh.hpp  objgl.c  objgl.h  program.hpp  shader.cpp  uniformbuffer.hpp
src/scene/: cubemap.cpp  cubemap.hpp  layertextureset.cpp  layertextureset.hpp  object.cpp  object.hpp  texture.cpp  texture.hpp  ub0.hpp  ub1.hpp
textures/: christmas_ball_alpha0-1.hdr  christmas_ball_alpha0-2.hdr  christmas_ball_alpha0-3.hdr  christmas_ball_alpha0.hdr  christmas_ball_eta0.hdr  christmas_ball_kappa1-1.hdr  christmas_ball_kappa1-2.hdr  christmas_ball_kappa1.hdr  eta.hdr  kappa.hdr  mug_kappa1-2.hdr  mug_kappa1-3.hdr  mug_kappa1.hdr  vase_alpha0.hdr  vase_kappa1.hdr  whale_alpha0.hdr  whale_kappa1.hdr
